fix: Fix footer overlapping content on desktop

--- a/css/about.css
+++ b/css/about.css
@@ -29,10 +29,7 @@ p {
 
     .about {
         margin: 150px 200px;
-        height: 80vh;
     }
 
-    #footer {
-        height: 100%;
-    }
+
 }
